# java-architect-skills

./: .gitignore  .java-architect.json.example  README.md  SKILL.md  index.js  java-architect-refactor-2026-01-31T04-02-35.md  java-architect-refactor-2026-01-31T05-30-32.md  java-architect-refactor-2026-01-31T06-18-16.md  marketplace.json  package-lock.json  package.json  prompt.md  pyproject.toml  requirements.txt
.agent/workflows/: install-skill.md
.claude-plugin/: marketplace.json  plugin.json
.java-archient-checkpoints/: state-17965499b8e5bff64f1d99cae1e29c8c.json  state-46afb7b44ab81f70ccf2248d275e3f03.json  state-6c18f11a43523d5ceac939431ffd4684.json  state-aa4b0b394b86cf62b4d646de9e4d6629.json  state-fa776bce6e7b4b55e14c985a370a07e1.json
config/: spring-aop-rules.xml
plugins/java-architect-skills/: README.md  package.json
plugins/java-architect-skills/.claude-plugin/: plugin.json
plugins/java-architect-skills/scripts/agents/: index.js
plugins/java-architect-skills/src/lib/: downloader.js
scripts/: install.js  install.py
src/: server.js  server.py
src/lib/: cache.js  cli-tool.js  config.js  errors.js  java-parser-enhanced.js  java-parser.js  logger.js  master-agent-cli.js  master-agent.js  process.js  report-generator.js  skill-loader.js  worker-agents.js
src/skills/agents/master-agent/: README.md  SKILL.md  prompt.md  skill.json
src/skills/analyzers/spring-reviewer/: README.md  prompt.md  skill.json
src/skills/architects/java-architect/: README.md  SKILL.md  prompt.md  skill.json
src/skills/spring_reviewer/: SKILL.md  skill.json
(+19 files in other folders)
