[project]
name = "java-architect-skills"
version = "1.0.0"
description = "MCP Server Collection for Java Architects"
authors = [
    {name = "zmlio", email = "your-email@example.com"}
]
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
spring-reviewer = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
